# Browbeat-ML

./: README.md  backend.py  browbeat_run.py  browbeat_test.py  config.yml  main.py  requirements.txt  setup.cfg  setup.py  tests.py
bml/: __init__.py  bml.py  config.yml
bml/lib/: __init__.py  browbeat_run.py  browbeat_test.py  crdb_summary.py  data_summary.py  dtree_classifier.py  elastic_backend.py  logsummary_uploaddb.py  perf_classifier.py  perf_classify.py  perf_predict.py  test_classifiers.py  timeseries_uploaddb.py  update_classifiers.py  update_crdb.py  util.py
bml/lib/classifier/: dtree.pkl  dumped_dtree.pkl  dumped_svc.pkl  gnb.pkl  svc.pkl
