[metadata]
name = bml
summary = Data insight and processing library for Openstack Browbeat data
author = jkilpatr
author-email = jkilpatr@redhat.com
home-page = https://github.com/jkilpatr/Browbeat-ML
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4


[files]
packages =
    bml
extra_files =
    bml/config.yml

[entry_points]
console_scripts =
    bml = bml.bml:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
